BUG: 181015

Remove the last of synchronous network access from librtm.

svn path=/trunk/KDE/kdeplasma-addons/; revision=1053872